# macroeconomic_data_analysis

./: .gitignore  LICENSE  README.md  main.py  makefile  pyproject.toml
src/: analyzer.py  calculator.py  models.py  reader.py
src/reports/: __init__.py  average_gdp.py  base.py
src/utils/: converters.py  validators.py
tests/: conftest.py
tests/integration/: test_analyzer.py  test_reader_integration.py
tests/reports/: test_average_gdp.py  test_base.py
tests/unit/: test_calculator.py  test_converters.py  test_models.py  test_reader.py  test_validators.py
